kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
  namespace: laravel-deploy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: thaigiaduc/laravel-first-app-app
          ports:
            - containerPort: 9000

---

apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: laravel-deploy-app
spec:
  selector:
    app: app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
