kubernetes/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-db
  namespace: laravel-deploy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: thaigiaduc/laravel-first-app-db
          ports:
            - containerPort: 3307
          volumeMounts:
            - name: mysql
              mountPath: /var/lib/mysql

      volumes:
        - name: mysql

---

apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: laravel-deploy-app
spec:
  selector:
    app: db
  type: NodePort
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
