kubernetes/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-nginx
  namespace: laravel-deploy-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: thaigiaduc/laravel-first-app-nginx
          ports:
            - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: laravel-deploy-app
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
      name: http
